Issue #14583: Fix importlib bug when a package's __init__.py would first import one of its modules then raise an error.